--- a/index.html
+++ b/index.html
@@ -7,14 +7,21 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <header class="cabecalho-imagem"> 
+    <header class="cabecalho"> 
         <img class="cabecalho-imagem" src="Logo-Alura-para_empresas-Alta (1).webp"alt="logo da alura start">
         <ul class="cabecalho-lita">
             <li class="cabecalho-lita-item">escola</li>
             <li class="cabecalho-lita-item">estudante</li>
        </ul>
     </header>
-   
+    <section class="escola">
+    <h2 class="escola-título"> Sobre a escola</h2>
+    <p class="ecola-texto-um">É a instituição que fornece o processo de ensino para discentes (alunos), com o objetivo de formar e desenvolver cada indivíduo em seus aspectos cultural, social e cognitivo.       </p>
+    <p class="escola-texto-doi"> A palavra escola vem do grego scholé, que significa "ócio" - o mesmo que “lazer ou tempo livre”.</p>
+    <img class="escola-imagem" src="Knowledge-cuate (3).png" alt="Professora no quadro">
+   </section>
 </body>
+
 </html>
