--- a/index.html
+++ b/index.html
@@ -11,17 +11,32 @@
 <body>
     <header class="cabecalho"> 
         <img class="cabecalho-imagem" src="Logo-Alura-para_empresas-Alta (1).webp"alt="logo da alura start">
-        <ul class="cabecalho-lita">
-            <li class="cabecalho-lita-item">escola</li>
-            <li class="cabecalho-lita-item">estudante</li>
+        <ul class="cabecalho-lista">
+            <li class="cabecalho-lista-item">escola</li>
+            <li class="cabecalho-lista-item">estudante</li>
        </ul>
     </header>
     <section class="escola">
-    <h2 class="escola-título"> Sobre a escola</h2>
-    <p class="ecola-texto-um">É a instituição que fornece o processo de ensino para discentes (alunos), com o objetivo de formar e desenvolver cada indivíduo em seus aspectos cultural, social e cognitivo.       </p>
-    <p class="escola-texto-doi"> A palavra escola vem do grego scholé, que significa "ócio" - o mesmo que “lazer ou tempo livre”.</p>
+        <div class="escola-div-conteudo" >
+       <h2 class="escola-título"> Sobre a escola</h2>
+       <p class="ecola-texto-um">É a instituição que fornece o processo de ensino para discentes (alunos), com o objetivo de formar e desenvolver cada indivíduo em seus aspectos cultural, social e cognitivo.       </p>
+       <p class="escola-texto-dois"> A palavra escola vem do grego scholé, que significa "ócio" - o mesmo que “lazer ou tempo livre”.</p>
+    </div>
     <img class="escola-imagem" src="Knowledge-cuate (3).png" alt="Professora no quadro">
-   </section>
+ </section>
+ <section class="estudante">
+        <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="e1f2d1654ed656c27553f99f56fff3d9.jpg" alt="foto da tiana">
+            <h3 class="estudante-nome">tiana</h3>
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="e1f2d1654ed656c27553f99f56fff3d9.jpg" alt="foto da tiana">
+            <h3 class="estudante-nome">tiana</h3>
+        </div>
+        <section>
+            <footer class="rodape">
+            <img  class="rodape-imagem"src="alurastart logo.png" alt="alutalogo">
+</section>
 </body>
-
-</html>
+</html><a href="https://storyset.com/education">Education illustrations by Storyset</a>
